--- a/src/about.html
+++ b/src/about.html
@@ -68,5 +68,10 @@
     </div>
 </section>
 
+    <!-- Scripts -->
+    <script src="scripts/media-manager.js"></script>
+    <script src="scripts/main.js"></script>
+    <script src="scripts/about.js"></script>
+
 </body>
 </html>
