--- a/src/index.html
+++ b/src/index.html
@@ -381,6 +381,7 @@
     </div>
 
     <!-- Scripts -->
+    <script src="scripts/media-manager.js"></script>
     <script src="scripts/main.js"></script>
 </body>
 </html>
