--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -84,6 +84,10 @@
             </div>
         </div>
     </section>
+    
+    <!-- Scripts -->
+    <script src="scripts/media-manager.js"></script>
+    <script src="scripts/main.js"></script>
     <script src="scripts/portfolio.js"></script>
 </body>
 </html>
