--- a/src/services.html
+++ b/src/services.html
@@ -708,8 +708,8 @@
     </div>
 
     <!-- Scripts -->
+    <script src="scripts/media-manager.js"></script>
     <script src="scripts/main.js"></script>
     <script src="scripts/services.js"></script>
 </body>
-</html>
 </html>
