--- a/src/venues.html
+++ b/src/venues.html
@@ -688,6 +688,7 @@
     </div>
 
     <!-- Scripts -->
+    <script src="scripts/media-manager.js"></script>
     <script src="scripts/main.js"></script>
     <script src="scripts/venues.js"></script>
 </body>
