Fixed Instagram links across the website

--- a/src/index.html
+++ b/src/index.html
@@ -274,7 +274,7 @@
                 </div>
             </div>
             <div class="instagram-cta">
-                <a href="https://instagram.com/" target="_blank" rel="noopener noreferrer" class="social-btn">
+                <a href="https://www.instagram.com/rockymountainweddings/" target="_blank" rel="noopener noreferrer" class="social-btn">
                     <i class="fab fa-instagram"></i> Follow @rockymountainweddings
                 </a>
             </div>
@@ -339,9 +339,9 @@
                     <div class="footer-social">
                         <h4>Follow Us</h4>
                         <div class="social-links">
-                            <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                            <a href="#" aria-label="Pinterest"><i class="fab fa-pinterest"></i></a>
-                            <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+                            <a href="https://www.facebook.com/rockymountainweddings" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                            <a href="https://www.instagram.com/rockymountainweddings/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.pinterest.com/rockymountainweddings" aria-label="Pinterest"><i class="fab fa-pinterest-p"></i></a>
                         </div>
                     </div>
                 </div>
