--- a/src/contact.html
+++ b/src/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - Rocky Mountain Weddings</title>
     <meta name="description" content="Get in touch with our wedding planning team to start planning your dream wedding in the Canadian Rockies.">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Raleway:wght@300;400;500;600&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"></script>
@@ -34,8 +34,8 @@
             <a href="mailto:hello@rockymountainweddings.ca"><i class="fas fa-envelope"></i> hello@rockymountainweddings.ca</a>
         </div>
         <div class="mobile-social">
-            <a href="https://instagram.com/rockymountainweddings" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="https://pinterest.com/rockymountainweddings" target="_blank"><i class="fab fa-pinterest"></i></a>
+            <a href="https://instagram.com/rockymountainweddings" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
+            <a href="https://pinterest.com/rockymountainweddings" target="_blank" rel="noopener"><i class="fab fa-pinterest"></i></a>
         </div>
     </div>
 
@@ -210,9 +210,9 @@
                         <div class="social-links">
                             <h4>Follow Us</h4>
                             <div class="social-icons">
-                                <a href="https://instagram.com/rockymountainweddings" target="_blank"><i class="fab fa-instagram"></i></a>
-                                <a href="https://pinterest.com/rockymountainweddings" target="_blank"><i class="fab fa-pinterest"></i></a>
-                                <a href="https://facebook.com/rockymountainweddings" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                                <a href="https://instagram.com/rockymountainweddings" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
+                                <a href="https://pinterest.com/rockymountainweddings" target="_blank" rel="noopener"><i class="fab fa-pinterest"></i></a>
+                                <a href="https://facebook.com/rockymountainweddings" target="_blank" rel="noopener"><i class="fab fa-facebook-f"></i></a>
                             </div>
                         </div>
                     </div>
@@ -301,9 +301,9 @@
                     <p><i class="fas fa-phone"></i> (403) 555-1234</p>
                     <p><i class="fas fa-envelope"></i> hello@rockymountainweddings.ca</p>
                     <div class="social-links">
-                        <a href="https://instagram.com/rockymountainweddings" target="_blank"><i class="fab fa-instagram"></i></a>
-                        <a href="https://pinterest.com/rockymountainweddings" target="_blank"><i class="fab fa-pinterest"></i></a>
-                        <a href="https://facebook.com/rockymountainweddings" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://instagram.com/rockymountainweddings" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
+                        <a href="https://pinterest.com/rockymountainweddings" target="_blank" rel="noopener"><i class="fab fa-pinterest"></i></a>
+                        <a href="https://facebook.com/rockymountainweddings" target="_blank" rel="noopener"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
             </div>
@@ -314,6 +314,6 @@
         </div>
     </footer>
 
-    <script src="js/main.js"></script>
+    <script src="scripts/main.js"></script>
 </body>
 </html>
