--- a/src/venues.html
+++ b/src/venues.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="styles/venues.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Raleway:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <!-- Mapbox GL for interactive map -->
-    <link href="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css" rel="stylesheet">
-    <script src="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js"></script>
+    <!-- Mapbox GL for interactive map - updated to latest version -->
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet">
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
     <!-- Pannellum for 360° tours -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pannellum/2.5.6/pannellum.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pannellum/2.5.6/pannellum.js"></script>
@@ -308,7 +308,7 @@
             </div>
             
             <div class="map-container">
-                <div id="venuesMap" class="venues-map"></div>
+                <div id="venuesMap" class="venues-map" style="height: 500px; width: 100%;"></div>
                 
                 <div class="map-sidebar">
                     <div class="region-filters">
