--- a/src/venues.html
+++ b/src/venues.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="styles/venues.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Raleway:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <!-- Google Maps API -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCM-Z8rjN4y7xKGBG24pNpv9kpwb8g1ELE&libraries=places&callback=Function.prototype"></script>
-    <!-- Pannellum for 360° tours -->
+    <!-- Google Maps API with all necessary libraries -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCM-Z8rjN4y7xKGBG24pNpv9kpwb8g1ELE&libraries=places,streetview,geometry&callback=Function.prototype"></script>
+    <!-- Pannellum for 360° tours (fallback) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pannellum/2.5.6/pannellum.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pannellum/2.5.6/pannellum.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"></script>
@@ -1578,11 +1578,13 @@
     </div>
 
     <!-- 360° Virtual Tour Modal -->
-    <div class="tour-modal" id="tourModal">
+    <div id="tourModal">
         <div class="modal-content">
-            <button class="close-modal" aria-label="Close modal">&times;</button>
-            <h2>Virtual Tour</h2>
-            <div id="tourContainer" class="tour-container"></div>
+            <div class="modal-header">
+                <h2>Virtual Tour</h2>
+                <button class="close-modal" aria-label="Close modal">&times;</button>
+            </div>
+            <div id="tourContainer"></div>
         </div>
     </div>
 
