--- a/src/venues.html
+++ b/src/venues.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles/venues.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Raleway:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <!-- Google Maps API with all necessary libraries and error handling -->
+    <!-- Google Maps API with modern dynamic loading approach -->
     <script>
         // Error handler for Google Maps
         function gm_authFailure() {
@@ -23,9 +23,14 @@
                 `;
             });
         }
+        
+        // Load Google Maps API using modern dynamic loading
+        (g=>{var h,a,k,p="The Google Maps JavaScript API",c="google",l="importLibrary",q="__ib__",m=document,b=window;b=b[c]||(b[c]={});var d=b.maps||(b.maps={}),r=new Set,e=new URLSearchParams,u=()=>h||(h=new Promise(async(f,n)=>{await (a=m.createElement("script"));e.set("libraries",[...r]+"");for(k in g)e.set(k.replace(/[A-Z]/g,t=>"_"+t[0].toLowerCase()),g[k]);e.set("callback",c+".maps."+q);a.src=`https://maps.${c}apis.com/maps/api/js?`+e;d[q]=f;a.onerror=()=>h=n(Error(p+" could not load."));a.nonce=m.querySelector("script[nonce]")?.nonce||"";m.head.append(a)}));d[l]?console.warn(p+" only loads once. Ignoring:",g):d[l]=(f,...n)=>r.add(f)&&u().then(()=>d[l](f,...n))})({
+            key: "AIzaSyCM-Z8rjN4y7xKGBG24pNpv9kpwb8g1ELE",
+            v: "weekly"
+        });
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCM-Z8rjN4y7xKGBG24pNpv9kpwb8g1ELE&libraries=places,streetview,geometry&callback=Function.prototype" onerror="console.error('Failed to load Google Maps API')"></script>
-    <!-- Pannellum for 360° tours (fallback) -->
+    <!-- Pannellum for 360° tours (for venue interiors) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pannellum/2.5.6/pannellum.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pannellum/2.5.6/pannellum.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"></script>
