--- a/src/wedding-venue.html
+++ b/src/wedding-venue.html
@@ -14,6 +14,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Raleway:wght@300;400;500;600&display=swap" rel="stylesheet"/>
 
   <!-- Google Maps API (older approach, no importLibrary) -->
+  
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQKjiWf6OucG1IHIvF93QjaxGM7rwb7Ww&libraries=geometry,places,marker,streetView&callback=initInteractiveMap" defer></script>
+
   <script>
     // Fallback: if there's an auth error with the Google Maps key
     function gm_authFailure() {
@@ -29,10 +32,7 @@
       });
     }
   </script>
-  <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCM-Z8rjN4y7xKGBG24pNpv9kpwb8g1ELE&libraries=geometry,places,marker,streetView&callback=Function.prototype"
-    defer
-  ></script>
+  
 
   <!-- Pannellum for 360° tours (optional interior) -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pannellum/2.5.6/pannellum.css" />
@@ -177,26 +177,6 @@
       </div>
     </div>
   </section>
-
-  <!-- Region Filters (Standalone) -->
-  <section class="region-filters-section reveal">
-    <div class="container">
-      <div class="section-heading">
-        <h2>Browse by Region</h2>
-        <p>Filter our collection of stunning wedding venues</p>
-      </div>
-      <div class="filter-buttons">
-        <button class="filter-btn active" data-filter="all">All Regions</button>
-        <button class="filter-btn" data-filter="banff">Banff</button>
-        <button class="filter-btn" data-filter="canmore">Canmore</button>
-        <button class="filter-btn" data-filter="lake-louise">Lake Louise</button>
-        <button class="filter-btn" data-filter="golden">Golden</button>
-        <button class="filter-btn" data-filter="jasper">Jasper</button>
-        <button class="filter-btn" data-filter="cochrane">Cochrane</button>
-      </div>
-    </div>
-  </section>
-
   <!-- Interactive Map Section -->
   <section class="interactive-map-section reveal">
     <div class="container">
