--- a/src/venues.html
+++ b/src/venues.html
@@ -33,7 +33,7 @@
             // This ensures the API is properly initialized before being used
         }
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCM-Z8rjN4y7xKGBG24pNpv9kpwb8g1ELE&libraries=places,marker,streetView,geometry&callback=initGoogleMapsAPI"></script>
+    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCM-Z8rjN4y7xKGBG24pNpv9kpwb8g1ELE&libraries=places,marker,streetView,geometry&callback=initGoogleMapsAPI"></script>
     <!-- Pannellum for 360° tours (for venue interiors) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pannellum/2.5.6/pannellum.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pannellum/2.5.6/pannellum.js"></script>
