--- a/src/venues.html
+++ b/src/venues.html
@@ -1602,7 +1602,7 @@
     </div>
 
     <!-- 360° Virtual Tour Modal -->
-    <div id="tourModal">
+    <div id="tourModal" class="tour-modal">
         <div class="modal-content">
             <div class="modal-header">
                 <h2>Virtual Tour</h2>
