Refactor venue data to use external JSON file instead of hardcoded array

--- a/src/venues.html
+++ b/src/venues.html
@@ -43,442 +43,15 @@
     onerror="gm_authFailure()">
   </script>
 
+  <!-- Venue data - preload for performance -->
+  <link rel="preload" href="data/venues.json" as="fetch" crossorigin="anonymous">
+  
   <!-- Pannellum for 360° tours (for venue interiors) -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pannellum/2.5.6/pannellum.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pannellum/2.5.6/pannellum.js"></script>
 
   <!-- Smoothscroll Polyfill for older browsers -->
-  <script src="https://cdn.jsdelivr.net/npm/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"></script>
-
-  <!-- Structured Data for SEO (sample schema for venue listing) -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "ItemList",
-    "name": "Rocky Mountain Wedding Venues",
-    "description": "A curated list of breathtaking venues in Banff, Canmore, Lake Louise, Jasper, Kananaskis, Golden, Cochrane, and Emerald Lake.",
-    "itemListElement": [
-      {
-        "@type": "ListItem",
-        "position": 1,
-        "item": {
-          "@type": "Place",
-          "name": "The Gem",
-          "description": "An elegant venue with magnificent mountain views, perfect for intimate weddings and celebrations.",
-          "address": {
-            "@type": "PostalAddress",
-            "streetAddress": "900A Harvie Heights Rd",
-            "addressLocality": "Bighorn No. 8",
-            "addressRegion": "Alberta",
-            "postalCode": "T1W 2W2",
-            "addressCountry": "Canada"
-          },
-          "geo": {
-            "@type": "GeoCoordinates",
-            "latitude": 51.0977,
-            "longitude": -115.3392
-          }
-        }
-      },
-      {
-        "@type": "ListItem",
-        "position": 2,
-        "item": {
-          "@type": "Place",
-          "name": "Fairmont Banff Springs Hotel",
-          "description": "Known as Canada's 'Castle in the Rockies,' offering luxurious wedding venues with mountain views.",
-          "address": {
-            "@type": "PostalAddress",
-            "streetAddress": "405 Spray Ave",
-            "addressLocality": "Banff",
-            "addressRegion": "Alberta",
-            "postalCode": "T1L 1J4",
-            "addressCountry": "Canada"
-          },
-          "geo": {
-            "@type": "GeoCoordinates",
-            "latitude": 51.1645,
-            "longitude": -115.5708
-          }
-        }
-      },
-      {
-        "@type": "ListItem",
-        "position": 3,
-        "item": {
-          "@type": "Place",
-          "name": "Sky Bistro, Gondola",
-          "description": "A breathtaking mountain-top venue with panoramic views accessed by a scenic gondola ride.",
-          "address": {
-            "@type": "PostalAddress",
-            "streetAddress": "100 Mountain Ave",
-            "addressLocality": "Banff",
-            "addressRegion": "Alberta",
-            "postalCode": "T1L 1J3",
-            "addressCountry": "Canada"
-          },
-          "geo": {
-            "@type": "GeoCoordinates",
-            "latitude": 51.1493,
-            "longitude": -115.5731
-          }
-        }
-      },
-      {
-        "@type": "ListItem",
-        "position": 4,
-        "item": {
-          "@type": "Place",
-          "name": "The Maple Leaf",
-          "description": "A charming restaurant in downtown Banff offering fine dining and an intimate setting for weddings.",
-          "address": {
-            "@type": "PostalAddress",
-            "streetAddress": "137 Banff Ave",
-            "addressLocality": "Banff",
-            "addressRegion": "Alberta",
-            "postalCode": "T1L 1C8",
-            "addressCountry": "Canada"
-          },
-          "geo": {
-            "@type": "GeoCoordinates",
-            "latitude": 51.1767,
-            "longitude": -115.5712
-          }
-        }
-      },
-      {
-        "@type": "ListItem",
-        "position": 5,
-        "item": {
-          "@type": "Place",
-          "name": "Mt. Norquay",
-          "description": "A ski resort venue with spectacular mountain vistas and a rustic lodge atmosphere.",
-          "address": {
-            "@type": "PostalAddress",
-            "streetAddress": "Improvement District No. 9",
-            "addressLocality": "Banff",
-            "addressRegion": "Alberta",
-            "postalCode": "T0L 1E0",
-            "addressCountry": "Canada"
-          },
-          "geo": {
-            "@type": "GeoCoordinates",
-            "latitude": 51.2080,
-            "longitude": -115.5937
-          }
-        }
-      },
-      {
-        "@type": "ListItem",
-        "position": 6,
-        "item": {
-          "@type": "Place",
-          "name": "Three Bears Brewery",
-          "description": "A unique brewery venue with rustic-industrial charm in the heart of Banff.",
-          "address": {
-            "@type": "PostalAddress",
-            "streetAddress": "205 Bear St",
-            "addressLocality": "Banff",
-            "addressRegion": "Alberta",
-            "postalCode": "T1L 1A1",
-            "addressCountry": "Canada"
-          },
-          "geo": {
-            "@type": "GeoCoordinates",
-            "latitude": 51.1761,
-            "longitude": -115.5693
-          }
-        }
-      },
-      {
-        "@type": "ListItem",
-        "position": 7,
-        "item": {
-          "@type": "Place",
-          "name": "Mainspace Solara",
-          "description": "A contemporary event space with mountain views and flexible layouts for weddings of all sizes.",
-          "address": {
-            "@type": "PostalAddress",
-            "streetAddress": "187 Kananaskis Way",
-            "addressLocality": "Canmore",
-            "addressRegion": "Alberta",
-            "postalCode": "T1W 2A3",
-            "addressCountry": "Canada"
-          },
-          "geo": {
-            "@type": "GeoCoordinates",
-            "latitude": 51.0899,
-            "longitude": -115.3487
-          }
-        }
-      },
-      {
-        "@type": "ListItem",
-        "position": 8,
-        "item": {
-          "@type": "Place",
-          "name": "Stewart Creek Golf Course",
-          "description": "An elegant golf course venue with stunning mountain backdrops and a modern clubhouse for receptions.",
-          "address": {
-            "@type": "PostalAddress",
-            "streetAddress": "4100 Stewart Creek Dr",
-            "addressLocality": "Canmore",
-            "addressRegion": "Alberta",
-            "postalCode": "T1W 2V3",
-            "addressCountry": "Canada"
-          },
-          "geo": {
-            "@type": "GeoCoordinates",
-            "latitude": 51.0574,
-            "longitude": -115.3696
-          }
-        }
-      },
-      {
-        "@type": "ListItem",
-        "position": 9,
-        "item": {
-          "@type": "Place",
-          "name": "Silvertip Resort",
-          "description": "A mountain golf resort offering stunning views of the Three Sisters peaks with beautiful indoor and outdoor ceremony spaces.",
-          "address": {
-            "@type": "PostalAddress",
-            "streetAddress": "2000 Silvertip Trail",
-            "addressLocality": "Canmore",
-            "addressRegion": "Alberta",
-            "postalCode": "T1W 3J4",
-            "addressCountry": "Canada"
-          },
-          "geo": {
-            "@type": "GeoCoordinates",
-            "latitude": 51.0911,
-            "longitude": -115.3126
-          }
-        }
-      },
-      {
-        "@type": "ListItem",
-        "position": 10,
-        "item": {
-          "@type": "Place",
-          "name": "The Malcolm Hotel",
-          "description": "A luxury hotel with Scottish-inspired elegance and sophisticated ballrooms for weddings.",
-          "address": {
-            "@type": "PostalAddress",
-            "streetAddress": "321 Spring Creek Dr",
-            "addressLocality": "Canmore",
-            "addressRegion": "Alberta",
-            "postalCode": "T1W 2G2",
-            "addressCountry": "Canada"
-          },
-          "geo": {
-            "@type": "GeoCoordinates",
-            "latitude": 51.0875,
-            "longitude": -115.3480
-          }
-        }
-      },
-      {
-        "@type": "ListItem",
-        "position": 11,
-        "item": {
-          "@type": "Place",
-          "name": "Creekside Villa",
-          "description": "A charming boutique venue with a picturesque setting along the creek and mountain views.",
-          "address": {
-            "@type": "PostalAddress",
-            "streetAddress": "709 Benchlands Trail",
-            "addressLocality": "Canmore",
-            "addressRegion": "Alberta",
-            "postalCode": "T1W 3G9",
-            "addressCountry": "Canada"
-          },
-          "geo": {
-            "@type": "GeoCoordinates",
-            "latitude": 51.0816,
-            "longitude": -115.3578
-          }
-        }
-      },
-      {
-        "@type": "ListItem",
-        "position": 12,
-        "item": {
-          "@type": "Place",
-          "name": "Finchy's @CanGOLF",
-          "description": "A unique golf simulator and event space offering a fun, casual setting for wedding events.",
-          "address": {
-            "@type": "PostalAddress",
-            "streetAddress": "306 Bow Valley Trail #125B",
-            "addressLocality": "Canmore",
-            "addressRegion": "Alberta",
-            "postalCode": "T1W 0N2",
-            "addressCountry": "Canada"
-          },
-          "geo": {
-            "@type": "GeoCoordinates",
-            "latitude": 51.0925,
-            "longitude": -115.3434
-          }
-        }
-      },
-      {
-        "@type": "ListItem",
-        "position": 13,
-        "item": {
-          "@type": "Place",
-          "name": "Fairmont Chateau Lake Louise",
-          "description": "An iconic venue on the shores of the emerald waters of Lake Louise with glacier views.",
-          "address": {
-            "@type": "PostalAddress",
-            "streetAddress": "111 Lake Louise Dr",
-            "addressLocality": "Lake Louise",
-            "addressRegion": "Alberta",
-            "postalCode": "T0L 1E0",
-            "addressCountry": "Canada"
-          },
-          "geo": {
-            "@type": "GeoCoordinates",
-            "latitude": 51.4168,
-            "longitude": -116.2175
-          }
-        }
-      },
-      {
-        "@type": "ListItem",
-        "position": 14,
-        "item": {
-          "@type": "Place",
-          "name": "Kicking Horse Resort",
-          "description": "A mountain resort offering breathtaking views and versatile venues for weddings throughout the year.",
-          "address": {
-            "@type": "PostalAddress",
-            "streetAddress": "1500 Kicking Horse Trail",
-            "addressLocality": "Golden",
-            "addressRegion": "British Columbia",
-            "postalCode": "V0A 1H0",
-            "addressCountry": "Canada"
-          },
-          "geo": {
-            "@type": "GeoCoordinates",
-            "latitude": 51.2980,
-            "longitude": -117.0475
-          }
-        }
-      },
-      {
-        "@type": "ListItem",
-        "position": 15,
-        "item": {
-          "@type": "Place",
-          "name": "Hillside Lodge & Chalets",
-          "description": "A rustic lodge with private chalets nestled in the mountains, perfect for intimate weddings.",
-          "address": {
-            "@type": "PostalAddress",
-            "streetAddress": "1740 Seward Frontage Rd",
-            "addressLocality": "Golden",
-            "addressRegion": "British Columbia",
-            "postalCode": "V0A 1H0",
-            "addressCountry": "Canada"
-          },
-          "geo": {
-            "@type": "GeoCoordinates",
-            "latitude": 51.3194,
-            "longitude": -116.9722
-          }
-        }
-      },
-      {
-        "@type": "ListItem",
-        "position": 16,
-        "item": {
-          "@type": "Place",
-          "name": "Emerald Lake Lodge",
-          "description": "A secluded lodge on the shores of the vibrant, glacier-fed Emerald Lake, perfect for intimate weddings.",
-          "address": {
-            "@type": "PostalAddress",
-            "streetAddress": "1 Emerald Lake Rd",
-            "addressLocality": "Field",
-            "addressRegion": "British Columbia",
-            "postalCode": "V0A 1G0",
-            "addressCountry": "Canada"
-          },
-          "geo": {
-            "@type": "GeoCoordinates",
-            "latitude": 51.4429,
-            "longitude": -116.5285
-          }
-        }
-      },
-      {
-        "@type": "ListItem",
-        "position": 17,
-        "item": {
-          "@type": "Place",
-          "name": "Pyramid Lake Lodge",
-          "description": "Charming lakeside lodge with mountain views and private island for ceremonies.",
-          "address": {
-            "@type": "PostalAddress",
-            "streetAddress": "Km North On, Pyramid Lake Rd #6",
-            "addressLocality": "Jasper",
-            "addressRegion": "Alberta",
-            "postalCode": "T0E 0A8",
-            "addressCountry": "Canada"
-          },
-          "geo": {
-            "@type": "GeoCoordinates",
-            "latitude": 52.9310,
-            "longitude": -118.0945
-          }
-        }
-      },
-      {
-        "@type": "ListItem",
-        "position": 18,
-        "item": {
-          "@type": "Place",
-          "name": "Maligne Lake Chalet",
-          "description": "Historic chalet on the shores of iconic Maligne Lake with stunning mountain backdrops.",
-          "address": {
-            "@type": "PostalAddress",
-            "streetAddress": "Maligne Lake Rd",
-            "addressLocality": "Jasper",
-            "addressRegion": "Alberta",
-            "postalCode": "T0E 1E0",
-            "addressCountry": "Canada"
-          },
-          "geo": {
-            "@type": "GeoCoordinates",
-            "latitude": 52.7167,
-            "longitude": -117.6333
-          }
-        }
-      },
-      {
-        "@type": "ListItem",
-        "position": 19,
-        "item": {
-          "@type": "Place",
-          "name": "Cochrane RancheHouse",
-          "description": "A charming venue with rustic elegance and panoramic views of the Rocky Mountains and Bow River Valley.",
-          "address": {
-            "@type": "PostalAddress",
-            "streetAddress": "101 Ranchehouse Rd",
-            "addressLocality": "Cochrane",
-            "addressRegion": "Alberta",
-            "postalCode": "T4C 2K8",
-            "addressCountry": "Canada"
-          },
-          "geo": {
-            "@type": "GeoCoordinates",
-            "latitude": 51.1945,
-            "longitude": -114.4669
-          }
-        }
-      }
-    ]
-  }
-  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll-polyfill/0.4.4/smoothscroll.min.js"></script>
 </head>
 <body>
   <!-- Preloader (optional) -->
