--- a/src/venues.html
+++ b/src/venues.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="styles/main.css">
   <link rel="stylesheet" href="styles/venues.css">
 
-  <!-- Google Maps API with explicit Street View library -->
+  <!-- Google Maps API with correct libraries -->
   <script>
     // Inline error handler for Google Maps
     function gm_authFailure() {
@@ -39,7 +39,7 @@
     }
   </script>
   <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCM-Z8rjN4y7xKGBG24pNpv9kpwb8g1ELE&libraries=places,geometry,streetview&callback=initGoogleMapsAPI"
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCM-Z8rjN4y7xKGBG24pNpv9kpwb8g1ELE&libraries=places,geometry&callback=initGoogleMapsAPI"
     onerror="gm_authFailure()">
   </script>
 
